# luida

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.base.json  tsconfig.json
crates/luida-brain/: Cargo.toml
crates/luida-brain/src/: ingest.rs  lib.rs  memory.rs  memtree.rs  reflect.rs  report.rs
crates/luida-cli/: Cargo.toml
crates/luida-cli/src/: main.rs
crates/luida-cli/tests/: cli.rs
crates/luida-core/: Cargo.toml
crates/luida-core/migrations/: 0001_init.sql  0002_v2_core.sql  0003_quest_deps.sql  0004_memory_chunks.sql  0005_quest_runner.sql  0006_event_timeline_idx.sql
crates/luida-core/src/: db.rs  handoff.rs  lib.rs  models.rs  recover.rs  repo.rs
crates/luida-core/src/agents/: cancel.rs  config.rs  mod.rs  resolver.rs  runtime.rs  tokenjuice.rs
crates/luida-core/src/repo/: campaign.rs  event.rs  inmail.rs  memory_chunk.rs  mod.rs  project.rs  quest.rs  relationship.rs
crates/luida-planner/: Cargo.toml
crates/luida-planner/src/: lib.rs  plan.rs  planner.rs
crates/luida-runtimes/: Cargo.toml
crates/luida-runtimes/src/: fake.rs  lib.rs
crates/luida-server/: Cargo.toml
crates/luida-server/src/: dashboard.html  lib.rs
crates/luida-sidecar/: Cargo.toml
crates/luida-sidecar/src/: dispatch.rs  escalation.rs  lib.rs  triggers.rs  worktree.rs
crates/luida-tui/: Cargo.toml
crates/luida-tui/src/: lib.rs
docs/: architecture.md  implementation-plan.md  operations.md  v2-standalone.md  web-design-spec.md
docs/adr/: 0001-rust-vs-typescript-for-v2.md  0002-frontend-bridge-architecture.md
docs/examples/: agents.json  relationships.yaml
docs/reports/: luida-v2-spec.html
docs/reviews/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  v2-p0.md  v2-p1.md  v2-p10.md  v2-p11.md  v2-p12.md  v2-p2.md  v2-p3.md  v2-p4.md  v2-p5.md  v2-p6.md  v2-p7.md  v2-p8.md  v2-p9.md
scripts/: build-report.ts  cmux-pane.sh
