[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["roto <roto@daangn.com>"]
license = "UNLICENSED"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = "thin"
