[package]
name = "luida-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
# NOTE: 도메인 에러 타입화(thiserror CoreError)는 후속 — 현재 anyhow.
