[package]
name = "luida-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
luida-core = { path = "../luida-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
async-stream = "0.3"
futures-core = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
