[package]
name = "luida-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
luida-core = { path = "../luida-core" }
luida-planner = { path = "../luida-planner" }
luida-sidecar = { path = "../luida-sidecar" }
luida-runtimes = { path = "../luida-runtimes" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
